chore: migrate ts-node to swc
