# backend/node/src/infrastructure/server/express/routes/index.ts
@@ -6,6 +6,6 @@ const router = Router();
 
 router.use('/', appRouter);
 
-router.use('/user', userRouter);
+router.use('/users', userRouter);
 
 export { router };
